// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.framework.kubernetes.kubeclient;

option go_package = "namespacelabs.dev/foundation/framework/kubernetes/kubeclient";

message StaticConfig {
    string endpoint_address           = 1;
    bytes  certificate_authority_data = 2;
    bytes  client_certificate_data    = 3;
    bytes  client_key_data            = 4;
}
